--- a/main.css
+++ b/main.css
@@ -21,13 +21,13 @@
     border: 2px solid black;
     margin-right: 6px;
     font-size: 30px;
-
 }
 .content {
     border: 2px solid black;
     width: 840px;
     min-height: 200px;
     margin: 5px;
+    background: darkturquoise;
 }
 
 .second-content {
@@ -49,6 +49,11 @@
     text-decoration: none;
 }
 
+.header-name a{
+    text-decoration: none;
+    color: black;
+    font-size: 24pt;
+}
 .header-menu ul {
     display: flex;
     justify-content: space-between;
@@ -68,4 +73,14 @@
     width: 590px;
     min-height: 160px;
     margin: 5px;
+}
+
+.bolder {
+    font-weight: bolder;
+    margin-bottom:0px ;
+}
+
+.text{
+    font-size: 10pt;
+    font-family: "Courier";
 }
